<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/dark_blue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmpe277.androiddatastorage.PreferencesActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sjsulogo" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preference_title"
            android:textSize="@dimen/font_medium"
            android:textColor="@android:color/white"
            android:layout_toRightOf="@id/imageView1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/temp_layout"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/book_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textAlignment="viewEnd"/>
        <EditText
            android:id="@+id/book_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@android:color/white"
            android:hint="@string/char_limit_70"
            android:textColorHint="@android:color/darker_gray"
            android:maxLength="70"
            android:textSize="@dimen/font_small"
            android:textColor="@android:color/black"
            android:layout_toRightOf="@id/book_name" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/author_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/author_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textAlignment="viewEnd"/>
        <EditText
            android:id="@+id/author_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@android:color/white"
            android:textSize="@dimen/font_small"
            android:textColor="@android:color/black"
            android:hint="@string/char_limit_70"
            android:maxLength="70"
            android:textColorHint="@android:color/darker_gray"
            android:layout_toRightOf="@id/author_name" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/desc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/desc_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="viewEnd"/>
        <EditText
            android:id="@+id/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@android:color/white"
            android:layout_toRightOf="@id/desc"
            android:hint="@string/char_limit_250"
            android:textColorHint="@android:color/darker_gray"
            android:maxLength="250"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="20"
            android:textSize="@dimen/font_small"
            android:textColor="@android:color/black"
            android:scrollbars="vertical" />
    </RelativeLayout>
    <TableLayout
        android:id="@+id/button_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:onClick="onSavePreferences"
                android:text="@string/btn_save"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:textSize="@dimen/font_small"
                android:background="@color/light_yellow"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_height="50dp"
                android:onClick="onCancel"
                android:text="@string/btn_cancel"
                android:textSize="@dimen/font_small"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:background="@color/light_yellow" />
        </TableRow>
    </TableLayout>

</LinearLayout>
